Fixed the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="MinefieldExperiment">
 <head>
     <meta charset="utf-8">
-    <title>Minefield</title>
+    <title>Text to Image</title>
 
     <link rel="stylesheet" href="css/styles.css">
 
@@ -46,7 +46,6 @@
     <script>
 
     var c = new Compressor();
-
 
     var input = document.getElementById('input');
     var output = document.getElementById('image-output');
